# probabilidad-descenso

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml
.apex/: context.db
.apex/brand/design-system/: README.md
.apex/brand/identity/: README.md
.apex/brand/performance/: README.md
.apex/brand/strategy/: README.md
.apex/raw/decisions-log/: README.md
.apex/raw/papers/: README.md
.apex/raw/research/: README.md
.apex/raw/socratic/: README.md
.apex/releases/: README.md
.apex/wiki/: EDGE-CASES.md  SCHEMA.md  SPEC.md  index.md  log.md
.apex/wiki/concepts/: architecture.md  cli-ux.md  problem-analysis.md  value-proposition.md
.apex/wiki/entities/: data-model.md  laligaendirecto.md  openfootball.md
.apex/wiki/originals/: visilud-estado-de-animo.md
.github/workflows/: ci.yml
data/: coach_changes.yaml  team_aliases.yaml
docs/: community-factors.md  sensitivity.md
scripts/: scrape_replies.py  scrape_x_browser.py
src/descenso/: __init__.py  config.py
src/descenso/adapters/: __init__.py
src/descenso/application/: __init__.py  backtest.py  build_strengths.py  calibrate.py  compare_models.py  export_html.py  history.py  run_simulation.py  scrape_replies.py
src/descenso/cli/: __init__.py  app.py
src/descenso/domain/: __init__.py  match.py  match_model.py  motivation.py  probabilities.py  simulator.py  standings.py  strength_model.py  team.py  tiebreakers.py
tests/: conftest.py  test_backtest.py  test_build_strengths.py  test_calibrate.py  test_cli.py  test_compare_models.py  test_config.py  test_export_html.py  test_history.py  test_run_simulation.py  test_scaffold.py  test_scrape_replies.py  test_team_aliases.py
tests/adapters/: test_cache.py  test_clubelo_elo.py  test_coach_changes_file.py  test_schedule.py  test_understat_xg.py
tests/domain/: test_dixon_coles.py  test_match.py  test_match_model.py  test_probabilities.py  test_simulator.py  test_simulator_edge.py  test_standings.py  test_strength_model.py  test_tiebreakers.py
(+8 files in other folders)
